<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="new_workout_name_label">Workout name:</string>
  <string name="new_workout_name_hint">Workout name</string>
  <string name="workout_detail_save_button">Save Workout</string>
  <string name="start_workout_button">Start Workout</string>

  <string name="workout_detail">Workout detail</string>

  <string name="workout_step_1">Workout days</string>
  <string name="workout_step_2">Exercises</string>

  <string name="no_recent_data">No recent data</string>
  <string name="next">Next</string>

  <string name="weekday_monday">M</string>
  <string name="weekday_tuesday">T</string>
  <string name="weekday_wednesday">W</string>
  <string name="weekday_thursday">T</string>
  <string name="weekday_friday">F</string>
  <string name="weekday_saturday">S</string>
  <string name="weekday_sunday">S</string>
</resources>